crates/au-cli/tests/it/snapshots/it__scenarios__inline-block-id-dangling.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "block-id-not-found",
      "message": "field 'to' wikilink `[[^^ghost]]` — block-id `ghost` not found in this file",
      "related": [
        {
          "file": "<root>/scenarios/inline-block-id-dangling/type/edge.type.yaml",
          "line_col": {
            "end": {
              "col": 12,
              "line": 3
            },
            "start": {
              "col": 7,
              "line": 3
            }
          },
          "range": {
            "end": 33,
            "start": 28
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/inline-block-id-dangling/board.md",
        "line_col": {
          "end": {
            "col": 22,
            "line": 8
          },
          "start": {
            "col": 9,
            "line": 8
          }
        },
        "range": {
          "end": 105,
          "start": 92
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 30,
                        "line_col": {
                          "end": {
                            "col": 31,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/inline-block-id-dangling/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "inline-block-id-dangling"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "inline-block-id-dangling"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/inline-block-id-dangling/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "^^",
            "kind": "inline_code",
            "span": {
              "end": 181,
              "line_col": {
                "end": {
                  "col": 5,
                  "line": 12
                },
                "start": {
                  "col": 1,
                  "line": 12
                }
              },
              "start": 177
            }
          },
          {
            "content": "block-id-not-found",
            "kind": "inline_code",
            "span": {
              "end": 249,
              "line_col": {
                "end": {
                  "col": 73,
                  "line": 12
                },
                "start": {
                  "col": 53,
                  "line": 12
                }
              },
              "start": 229
            }
          },
          {
            "content": "^",
            "kind": "inline_code",
            "span": {
              "end": 303,
              "line_col": {
                "end": {
                  "col": 50,
                  "line": 13
                },
                "start": {
                  "col": 47,
                  "line": 13
                }
              },
              "start": 300
            }
          }
        ],
        "claim": [
          "canvas"
        ],
        "closure": [
          "canvas"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "edges",
            "origins": [
              {
                "name": "canvas",
                "origin_path": "<root>/scenarios/inline-block-id-dangling/type/canvas.type.yaml",
                "required": true,
                "shape": "edge[]"
              }
            ],
            "required": true,
            "shape": "edge[]"
          },
          {
            "divergent": false,
            "field": "nodes",
            "origins": [
              {
                "name": "canvas",
                "origin_path": "<root>/scenarios/inline-block-id-dangling/type/canvas.type.yaml",
                "required": true,
                "shape": "node&[]"
              }
            ],
            "required": true,
            "shape": "node&[]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 106,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 9
                          },
                          "start": {
                            "col": 5,
                            "line": 7
                          }
                        },
                        "start": 65
                      },
                      "file": "<root>/scenarios/inline-block-id-dangling/board.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "fields": [
                        {
                          "field": "from",
                          "values": [
                            {
                              "anchor": null,
                              "block_id": {
                                "id": "root",
                                "referent": true
                              },
                              "kind": "reference",
                              "target": ""
                            }
                          ]
                        },
                        {
                          "field": "to",
                          "values": [
                            {
                              "anchor": null,
                              "block_id": {
                                "id": "ghost",
                                "referent": true
                              },
                              "kind": "reference",
                              "target": ""
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "from",
                      "values": [
                        {
                          "anchor": null,
                          "block_id": {
                            "id": "root",
                            "referent": true
                          },
                          "kind": "reference",
                          "target": ""
                        }
                      ]
                    },
                    {
                      "field": "to",
                      "values": [
                        {
                          "anchor": null,
                          "block_id": {
                            "id": "ghost",
                            "referent": true
                          },
                          "kind": "reference",
                          "target": ""
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "edges"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 54,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 6
                          },
                          "start": {
                            "col": 5,
                            "line": 4
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/inline-block-id-dangling/board.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "fields": [
                        {
                          "field": "content",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "root"
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "content",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "root"
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "nodes"
          }
        ],
        "file": "<root>/scenarios/inline-block-id-dangling/board.md",
        "record_block_ids": [
          {
            "claims": [
              "node"
            ],
            "id": "root",
            "span": {
              "end": 35,
              "line_col": {
                "end": {
                  "col": 12,
                  "line": 4
                },
                "start": {
                  "col": 8,
                  "line": 4
                }
              },
              "start": 31
            }
          }
        ],
        "section_presence": null
      }
    ]
  }
}
