crates/au-cli/tests/it/snapshots/it__scenarios__inline-block-id-duplicate.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "block-id-duplicate",
      "message": "block-id `^obs-1` appears 2 times in this file; references resolve to the first only — disambiguate",
      "related": [
        {
          "file": "<root>/scenarios/inline-block-id-duplicate/notes.md",
          "line_col": {
            "end": {
              "col": 1,
              "line": 13
            },
            "start": {
              "col": 1,
              "line": 12
            }
          },
          "range": {
            "end": 198,
            "start": 191
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/inline-block-id-duplicate/notes.md",
        "line_col": {
          "end": {
            "col": 13,
            "line": 5
          },
          "start": {
            "col": 8,
            "line": 5
          }
        },
        "range": {
          "end": 98,
          "start": 93
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 31,
                        "line_col": {
                          "end": {
                            "col": 32,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/inline-block-id-duplicate/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "inline-block-id-duplicate"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "inline-block-id-duplicate"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/inline-block-id-duplicate/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 132,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 121
            },
            "text": "Findings"
          },
          {
            "id": "obs-1",
            "kind": "block_id_marker",
            "span": {
              "end": 198,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 13
                },
                "start": {
                  "col": 1,
                  "line": 12
                }
              },
              "start": 191
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/inline-block-id-duplicate/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "items",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/inline-block-id-duplicate/type/note.type.yaml",
                "required": false,
                "shape": "item[]"
              }
            ],
            "required": false,
            "shape": "item[]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 78,
                        "line_col": {
                          "end": {
                            "col": 64,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/inline-block-id-duplicate/notes.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "An inline-record id colliding with a body marker"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "An inline-record id colliding with a body marker"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 116,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 7
                          },
                          "start": {
                            "col": 5,
                            "line": 5
                          }
                        },
                        "start": 90
                      },
                      "file": "<root>/scenarios/inline-block-id-duplicate/notes.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "fields": [
                        {
                          "field": "label",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "first"
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "label",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "first"
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "items"
          }
        ],
        "file": "<root>/scenarios/inline-block-id-duplicate/notes.md",
        "record_block_ids": [
          {
            "claims": [
              "item"
            ],
            "id": "obs-1",
            "span": {
              "end": 98,
              "line_col": {
                "end": {
                  "col": 13,
                  "line": 5
                },
                "start": {
                  "col": 8,
                  "line": 5
                }
              },
              "start": 93
            }
          }
        ],
        "section_presence": null
      }
    ]
  }
}
